--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "192x192"
     },
     {
-      "src": "/favicon.ico",
+      "src": "/logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
