--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "imagekit": "^6.0.0",
     "lucide-react": "^0.517.0",
+    "midtrans-client": "^1.4.3",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
