--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.19.1",
     "imagekit": "^6.0.0",
     "lucide-react": "^0.517.0",
     "midtrans-client": "^1.4.3",
