--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.6.1",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.80.7",
@@ -34,6 +36,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.1",
     "imagekit": "^6.0.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.517.0",
     "midtrans-client": "^1.4.3",
     "next": "15.3.3",
@@ -49,6 +52,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
