--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-quill-new": "^3.4.6",
     "recharts": "^2.15.3",
     "supabase": "^2.26.9",
