--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "framer-motion": "^12.19.1",
     "imagekit": "^6.0.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.517.0",
     "midtrans-client": "^1.4.3",
     "next": "15.3.3",
